--- a/src/components/PostListComponent/PostListComponent.css
+++ b/src/components/PostListComponent/PostListComponent.css
@@ -10,7 +10,6 @@
   filter: drop-shadow(0px 4px 23px rgba(0, 0, 0, 0.25));
 }
 
-
 .createCommentComponent__input {
   border: 0;
   outline: 0;
@@ -26,8 +25,6 @@
 .createCommentComponent__input:hover {
   border-bottom: 1px solid #535353;
 }
-
-
 
 .createCommentComponent__button {
   width: 50px;
@@ -64,6 +61,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: start;
   gap: 30px;
   font-weight: 700;
   /* justify-content: space-between; */
@@ -123,7 +121,7 @@
   border-radius: 20px;
 }
 
-.comment__username{
+.comment__username {
   font-weight: 700;
   margin-right: 15px;
 }
@@ -175,4 +173,14 @@
   display: flex;
   justify-content: start;
   text-align: start;
+}
+
+.likeCount {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.likeCountText {
+  margin-left: 10px;
 }
